# COW

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SPECIFICATION.md
.github/workflows/: ci.yml
src/: compiler.cpp  instruction.cpp  main.cpp  parser.cpp  vm.cpp
tests/: CMakeLists.txt  test_main.cpp  test_parser.cpp  test_vm.cpp
